--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>OIH PDF Pro - Auto-Sync OCR</title>
+    <title>OIH PDF Pro - Live Edit Fix</title>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
@@ -15,36 +15,38 @@
         .btn { padding: 10px 18px; border-radius: 6px; border: none; cursor: pointer; font-weight: bold; font-size: 13px; transition: 0.2s; }
         .btn-ocr { background: #4f46e5; color: white; }
         .btn-tool { background: var(--gold); color: black; }
-        .btn-save { background: #10b981; color: white; box-shadow: 0 0 15px rgba(16,185,129,0.3); }
+        .btn-save { background: #10b981; color: white; }
 
         #workspace { height: calc(100vh - 75px); overflow: auto; padding: 40px; background: #222; text-align: center; }
         #canvas-wrap { position: relative; display: inline-block; background: white; box-shadow: 0 0 50px rgba(0,0,0,0.6); }
         canvas { display: block; }
 
-        /* OCR Editable Fields */
+        /* FIXED OCR FIELDS */
         .ocr-field { 
-            position: absolute; color: transparent; background: rgba(79, 70, 229, 0.05); 
-            border: 1px solid transparent; outline: none; white-space: nowrap; overflow: hidden;
+            position: absolute; 
+            color: black; 
+            background: rgba(255, 255, 255, 0.9); /* Solid-ish background so you see your changes */
+            border: 1px solid rgba(79, 70, 229, 0.3); 
+            outline: none; 
+            white-space: nowrap; 
+            overflow: hidden;
+            display: flex;
+            align-items: center;
         }
-        .ocr-field:hover { background: rgba(79, 70, 229, 0.15); border-color: var(--gold); cursor: text; }
-        /* When clicked/editing, make text visible and background white */
-        .ocr-field:focus { color: black !important; background: white !important; border-color: var(--gold); z-index: 100; box-shadow: 0 0 10px rgba(0,0,0,0.2); }
+        .ocr-field:hover { border-color: var(--gold); cursor: text; background: white; }
+        .ocr-field:focus { border-color: var(--gold); z-index: 100; background: white; box-shadow: 0 0 8px var(--gold); }
 
         .loading-bar { display: none; position: fixed; top: 65px; left: 50%; transform: translateX(-50%); background: var(--gold); color: black; padding: 5px 20px; border-radius: 20px; font-weight: bold; font-size: 12px; z-index: 1000; }
-        
-        /* Clean Export Styles */
-        .exporting .ocr-field { border: none !important; background: transparent !important; }
     </style>
 </head>
 <body>
 
-<div id="loader" class="loading-bar">OCR Scanning... Please Wait...</div>
+<div id="loader" class="loading-bar">Scanning Document... Please Wait...</div>
 
 <div class="toolbar">
     <input type="file" id="pdf-input" accept="application/pdf" style="display:none">
-    <button class="btn btn-tool" onclick="document.getElementById('pdf-input').click()">📂 Upload PDF</button>
-    <button class="btn btn-ocr" onclick="startOCR()">🔍 Scan & Edit Text</button>
-    <button class="btn btn-tool" id="undoBtn" onclick="undo()" disabled>↩️ Undo</button>
+    <button class="btn btn-tool" onclick="document.getElementById('pdf-input').click()">📂 Open PDF</button>
+    <button class="btn btn-ocr" onclick="startOCR()">🔍 Enable Text Editing</button>
     <button class="btn btn-save" onclick="savePdf()">💾 DOWNLOAD EDITED PDF</button>
 </div>
 
@@ -57,10 +59,9 @@
 <script>
     const { PDFDocument, rgb, StandardFonts } = PDFLib;
     let originalBytes = null;
-    let history = [];
     let activeElements = [];
 
-    // --- 1. FILE LOADER ---
+    // --- 1. LOAD PDF ---
     document.getElementById('pdf-input').onchange = async (e) => {
         const file = e.target.files[0];
         if(!file) return;
@@ -78,9 +79,12 @@
 
         await page.render({canvasContext: context, viewport: viewport}).promise;
         document.getElementById('canvas-wrap').style.width = canvas.width + 'px';
+        // Clear old fields if new PDF is loaded
+        activeElements.forEach(el => el.remove());
+        activeElements = [];
     };
 
-    // --- 2. OCR "MAKE EDITABLE" LOGIC ---
+    // --- 2. OCR (LIVE EDIT MODE) ---
     async function startOCR() {
         if(!originalBytes) return alert("Please upload a PDF first");
         document.getElementById('loader').style.display = 'block';
@@ -97,14 +101,21 @@
             field.className = 'ocr-field';
             field.contentEditable = true;
             field.innerText = word.text;
-            field.dataset.original = word.text; // Store original to track changes
+            field.dataset.original = word.text; 
 
-            // Absolute Positioning
-            field.style.left = word.bbox.x0 + 'px';
-            field.style.top = word.bbox.y0 + 'px';
-            field.style.width = (word.bbox.x1 - word.bbox.x0) + 'px';
-            field.style.height = (word.bbox.y1 - word.bbox.y0) + 'px';
-            field.style.fontSize = ((word.bbox.y1 - word.bbox.y0) * 0.8) + 'px';
+            // Position and Size
+            field.style.left = (word.bbox.x0 - 1) + 'px';
+            field.style.top = (word.bbox.y0 - 1) + 'px';
+            field.style.width = (word.bbox.x1 - word.bbox.x0 + 2) + 'px';
+            field.style.height = (word.bbox.y1 - word.bbox.y0 + 2) + 'px';
+            field.style.fontSize = ((word.bbox.y1 - word.bbox.y0) * 0.85) + 'px';
+
+            // Prevent revert by ensuring we handle the "blur" event
+            field.onblur = function() {
+                // If text is empty, keep original (optional)
+                if(this.innerText.trim() === "") this.innerText = this.dataset.original;
+                console.log("Updated field to:", this.innerText);
+            };
 
             document.getElementById('canvas-wrap').appendChild(field);
             activeElements.push(field);
@@ -112,13 +123,12 @@
 
         await worker.terminate();
         document.getElementById('loader').style.display = 'none';
-        alert("OCR Ready! Click any text on the page to change it.");
+        alert("Editing Enabled! You can now click and change any word permanently.");
     }
 
-    // --- 3. AUTO-APPLY SAVE LOGIC ---
+    // --- 3. SAVE ---
     async function savePdf() {
         if(!originalBytes) return;
-        document.body.classList.add('exporting');
 
         try {
             const pdfDoc = await PDFDocument.load(originalBytes, { ignoreEncryption: true });
@@ -131,7 +141,7 @@
             const sy = height / canvas.height;
 
             activeElements.forEach(el => {
-                // ONLY apply if the text was actually changed
+                // Only print if the user actually edited the text
                 if (el.innerText !== el.dataset.original) {
                     const rect = el.getBoundingClientRect();
                     const canvRect = canvas.getBoundingClientRect();
@@ -139,7 +149,7 @@
                     const x = (rect.left - canvRect.left) * sx;
                     const y = height - ((rect.top - canvRect.top) * sy) - (rect.height * sy);
 
-                    // 1. Draw white box to "delete" the old text
+                    // Cover old text with white
                     page.drawRectangle({
                         x: x, y: y,
                         width: rect.width * sx,
@@ -147,10 +157,10 @@
                         color: rgb(1, 1, 1)
                     });
 
-                    // 2. Draw the NEW text in its place
+                    // Draw new text
                     page.drawText(el.innerText, {
                         x: x,
-                        y: y + (2 * sy),
+                        y: y + (1 * sy),
                         size: (rect.height * sy) * 0.8,
                         font: font,
                         color: rgb(0, 0, 0)
@@ -162,21 +172,13 @@
             const blob = new Blob([savedBytes], { type: 'application/pdf' });
             const link = document.createElement('a');
             link.href = URL.createObjectURL(blob);
-            link.download = "OIH_OCR_Synced.pdf";
+            link.download = "OIH_Final_Edited.pdf";
             link.click();
 
         } catch (err) {
             console.error(err);
             alert("Save failed. Try refreshing.");
-        } finally {
-            document.body.classList.remove('exporting');
         }
-    }
-
-    function undo() {
-        if(!activeElements.length) return;
-        const el = activeElements.pop();
-        el.remove();
     }
 </script>
 </body>
